Use KIO::rmdir for unlinking directories

Unlike KIO::del, this fails if the directory is not empty.

BUG: 482902